undo force main

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,10 +33,12 @@ jobs:
           # TODO: use makefile instead
           name: create packages
           command: |
-            python3 setup.py sdist bdist_wheel
-
+            if [ $CIRCLE_BRANCH == 'main' ] ; then
+              python3 setup.py sdist bdist_wheel
+            fi
       - run:
           name: upload to pypi
           command: |
-            twine upload dist/*
-
+            if [ $CIRCLE_BRANCH == 'main' ] ; then
+              twine upload dist/*
+            fi
